@@ -1,1 +1,6 @@
 # Hoptraf
+
+```
+/www/server/java/jdk-17.0.8/bin/java  -jar -Xmx1024M -Xms256M  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED /www/wwwroot/hoptraf/Hoptraf-0.0.1-SNAPSHOT.jar --server.port=9700 --spring.datasource.username=hoptraf --spring.datasource.password=xxx --hoptraf.data.path=/www/wwwroot/hoptraf/datarecords/*
+```
+
